styles/home.css
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 7rem;
  padding: 0 6rem;
  background-color: var(--white);
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  z-index: 5;
}

.header-info {
  font-size: 2.5rem;
  font-weight: 700;
  color: var(--text);
}

.color-mode {
  display: flex;
  align-items: center;
  gap: 0.8rem;
}
.color-icon {
  border: none;
  background-color: none;
  background-color: transparent;
}
.color-icon img {
  width: 1.8rem;
  margin-top: 5px;
}

.color-info {
  font-size: 2rem;
  color: var(--text);
}
.components {
  width: calc(100% - 13rem);
  margin: 0 6.5rem;
  display: flex;
  justify-content: space-between;
  margin-top: 11rem;
}

.search-form {
  display: flex;
  align-items: center;
  min-width: 35rem;
  border-radius: 4px;
  background-color: var(--white);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  padding: 1.5rem;
}

.search-icon {
  height: 15px;
  width: 15px;
  background-image: var(--searchIcon);
  background-repeat: no-repeat;
}

.search-input {
  flex: 1;
  font-size: 16px;
  border: none;
  margin-left: 1rem;
  color: var(--text);
  background-color: transparent;
}

.search-input:focus {
  outline: none;
}

.search-input::placeholder {
  color: var(--inputText);
}

.region {
  font-size: 1.3rem;
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 18rem;
  padding: 1rem;
  background-color: var(--white);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  cursor: pointer;
}
.region-text {
  color: var(--text);
}
.dropdown-arrow {
  height: 16px;
  width: 16px;
  background-image: var(--arrow);
  background-repeat: no-repeat;
  transition: all 0.2s;
}

.dropdown {
  color: var(--text);
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  overflow: hidden;
  margin-top: 0.8rem;
  list-style-type: none;
  opacity: 0;
  visibility: hidden;
  transform: translateY(10rem);
  background-color: var(--white);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  border-radius: 6px;
  transition: all 0.4s ease-out;
}

.dropdown-list {
  padding: 1rem 2rem;
}
.dropdown-list:hover {
  background-color: var(--background);
}

.dropdown-list:not(:last-child) {
  margin-bottom: 6px;
}

.countries {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: 3rem;
  width: calc(100% - 13rem);
  margin: 0 6.5rem;
  margin-top: 4rem;
}

.country {
  width: 26rem;
  height: 33rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.country-flag {
  width: 100%;
  height: 50%;
  border-radius: 6px 6px 0 0;
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
  background-color: var(--white);
}

.country-flag img {
  width: 100%; 
  height: 100%;
  object-fit: cover; 
  border-radius: inherit;
}

.country-info {
  height: 50%; 
  padding: 2.2rem 2rem;
  background-color: var(--white);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  border-radius: 0 0 6px 6px;
}

.country-info h1 {
  font-size: 2rem;
  color: var(--text);
  margin-bottom: 1rem;
}

.country-info p {
  font-size: 1.4rem;
  font-weight: 700;
  color: var(--text);
  margin-bottom: 0.15rem;
}

.country-info span {
  font-weight: 400;
  color: var(--text);
}

.showDropDown {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
}

.pagination { 
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: calc(100% - 13rem);
  margin: 0 6.5rem;
  padding: 5rem 0;
}

.pagination-btn {
  display: flex;
  justify-content: space-between;
}

.pagination-btn button{
  font-size: 1.8rem;
  color: var(--text);
  width: 14rem;
  padding: 1.2rem;
  border: none;
  border-radius: 3rem;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  background-color: var(--white); 
  cursor: pointer;
}

/* .pagination-btn button:hover{ 
  transform: scale(1.1) translateY(-.5rem);
} */

.pagination-btn2 {
  margin-left: auto;
}

.pagination-num { 
  font-size: 1.8rem;
  color: var(--text);
  align-self: center;
}

/* MEDIA QUERIES */
@media only screen and (max-width: 75em) {
  .country {
    width: 28rem;
    height: 36rem;
  }
  .country-info h1 {
    font-size: 2.2rem;
  }

  .country-info p {
    font-size: 1.6rem;
  }

  .search-form {
    width: 50%;
    padding: 1.8rem;
  }

  .region {
    font-size: 1.6rem;
  }
}

@media only screen and (max-width: 56.25em) {
  .components {
    flex-direction: column;
    gap: 2rem;
  }

  .search-form {
    width: 100%;
    padding: 2rem;
  }

  .search-input { 
    font-size: 18px;
  }

  .region {
    font-size: 2.2rem;
    width: 25rem;
    padding: 1.8rem;
  }

  .country {
    width: 34rem;
    height: 42rem;
  }

  .country-info h1 {
    font-size: 2.4rem;
  }

  .country-info p {
    font-size: 2rem;
  }

  .pagination-btn button{
    font-size: 2.2rem;
    width: 16rem;
    padding: 1.4rem;
    border-radius: 3.5rem;
  }

  .pagination-num { 
    font-size: 2.2rem;
  }
}

@media only screen and (max-width: 44rem) { 
  .countries { 
    justify-content: center;
  }
}

@media only screen and (max-width: 37.5rem) {
  .header {
    height: 10rem;
    padding: 0 3rem;
  }
  .components {
    width: calc(100% - 6rem);
    margin: 0 3rem;
    flex-direction: column;
    gap: 2rem;
    margin-top: 14rem;
  }

  .country {
    width: 40rem;
    height: 50rem;
  }

  .country-info {
    padding: 4rem 2rem 5rem 2rem;
  }

  .country-info h1 {
    font-size: 2.7rem;
  }

  .country-info p {
    font-size: 2.4rem;
  }

  .pagination-btn button{
    font-size: 2.5rem;
    width: 18rem;
    padding: 1.6rem;
    border-radius: 4rem;
  }

  .pagination-num { 
    font-size: 2.5rem;
  }

  .pagination-btn button:hover{ 
    transform: scale(1) translateY(0);
  }

}

